welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: not enough arguments for method isFacingTrail: (a: java.awt.Color)Boolean.
Unspecified value parameter a.
    if (isFacingTrail()==true) {
                     ^